# mother-duck-dbt

./: .env.template  .python-version  README.md  pyproject.toml
dbt_project/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/bronze/: area.sql  cafe.sql
