[tool.poetry]
name = "mother-duck-dbt"
version = "0.1.0"
description = ""
authors = ["sangwookWoo <wjddm3@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.8.2"
dbt-duckdb = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
